--- a/my_css/bling-bing.css
+++ b/my_css/bling-bing.css
@@ -1,4 +1,4 @@
-/* * {
-    background-color: black !important;
-    color: hotpink !important;
-} */
+.opacity-100.transition-all.ease-in-out.duration-200.flex.flex-row.items-center {
+    /* background-color: aliceblue;
+    color: red; */
+}
